# QuantAgent

./: .gitignore  CLAUDE.md  PROVIDER_USAGE.md  README.md  README_CLAUDE_CLI_WRAPPER.md  agent_state.py  claude_cli_wrapper.py  color_style.py  decision_agent.py  default_config.py  graph_setup.py  graph_util.py  index.html  indicator_agent.py  llm_factory.py  pattern_agent.py  prompt_provider.py  prompts.py  pyproject.toml  requirements.txt  run_analysis.py  run_multi_analysis.py  specification_claude CLI ラッパークラス for LangChain.md  trading_graph.py  trend_agent.py  web_interface.py
.claude/: settings.local.json
benchmark/btc/: BTC_4h_1.csv  BTC_4h_10.csv  BTC_4h_100.csv  BTC_4h_11.csv  BTC_4h_12.csv  BTC_4h_13.csv  BTC_4h_14.csv  BTC_4h_15.csv  BTC_4h_16.csv  BTC_4h_17.csv  BTC_4h_18.csv  BTC_4h_19.csv  BTC_4h_2.csv  BTC_4h_20.csv  BTC_4h_21.csv  BTC_4h_22.csv  BTC_4h_23.csv  BTC_4h_24.csv  BTC_4h_25.csv  BTC_4h_26.csv  BTC_4h_27.csv  BTC_4h_28.csv  BTC_4h_29.csv  BTC_4h_3.csv  BTC_4h_30.csv  BTC_4h_31.csv  BTC_4h_32.csv  BTC_4h_33.csv  BTC_4h_34.csv  BTC_4h_35.csv  BTC_4h_36.csv  BTC_4h_37.csv  BTC_4h_38.csv  BTC_4h_39.csv  BTC_4h_4.csv  BTC_4h_40.csv  BTC_4h_41.csv  BTC_4h_42.csv  BTC_4h_43.csv  BTC_4h_44.csv  (+60 more)
benchmark/cl/: CL_4h_1.csv  CL_4h_10.csv  CL_4h_100.csv  CL_4h_11.csv  CL_4h_12.csv  CL_4h_13.csv  CL_4h_14.csv  CL_4h_15.csv  (+92 more)
examples/: claude_cli_example.py
templates/: demo.html  demo_new.html  output.html
test/: test_all_agents_japanese.py  test_claude_cli_wrapper.py  test_fixed_analysis.py  test_japanese_output.py  test_web_language_switching.py
(+1400 files in other folders)
